--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DB_URL=mongodb+srv://SPM:dLBhaxm8RklBqQig@spm.uf7tkc9.mongodb.net/SoftwareProcessModeling?retryWrites=true&w=majority
+TOKEN_KEY=The header can be customized via the options.header object.
