--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.4.1",
+    "http-cache-semantics": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
