--- a/frontend_client/package.json
+++ b/frontend_client/package.json
@@ -13,13 +13,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "dompurify": "^3.0.6",
+    "env": "0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-world-flags": "^1.5.1",
-    "validator": "^13.7.0",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
